--- a/vignettes/MOFA.Rmd
+++ b/vignettes/MOFA.Rmd
@@ -6,7 +6,7 @@ output:
   BiocStyle::html_document:
     toc: true
 vignette: >
-  %\VignetteIndexEntry{Example_CLL}
+  %\VignetteIndexEntry{MOFA}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
