--- a/vignettes/MOFA.Rmd
+++ b/vignettes/MOFA.Rmd
@@ -5,14 +5,15 @@ date: "`r Sys.Date()`"
 output:
   BiocStyle::html_document:
     toc: true
+package: MOFA
 vignette: >
-  %\VignetteIndexEntry{MOFA}
+  %\VignetteIndexEntry{Introduction to MOFA}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 
-# What is MOFA about?
+# What is MOFA?
 MOFA is a factor analysis model that provides a general framework for the
 integration of multi-omic data sets in a completely unsupervised fashion.
 Intuitively, MOFA can be viewed as a versatile and statistically rigorous
@@ -40,7 +41,7 @@ devtools::install_github("bioFAM/MOFA", build_opts = c("--no-resave-data"))
 # BiocManager::install("MOFA", version = "3.9")
 ```
 
-As the package depends on the Pyhton package `mofapy`, this needs to be installed alongside with the R package. For this you can use the command `pip install mofapy`. Alternatively, you can clone the [MOFA git repository](https://github.com/bioFAM/MOFA/) and then install the package using `python setup.py install`. 
+As the package depends on the Pyhton package `mofapy`, this needs to be installed alongside with the R package. For this you can use the command `pip install mofapy`.
 
 For illustration of MOFA and gene set enrichment analyses we make use of data contained in the accompanying data package `MOFAdata`. This can be installed using
 ```{r, eval = FALSE}
@@ -49,6 +50,22 @@ devtools::install_github("bioFAM/MOFAdata", build_opts = c("--no-resave-data"))
 # BiocManager::install("MOFAdata", version = "3.9")
 ```
 
+# Reticulate configuration
+
+Before running MOFA, you need to make sure that `reticulate` is pointing to the correct python binary or conda environment.  
+This can become tricky when you have multiple conda environments and versions of Python installed:
+```r
+library(reticulate)
+
+# Using a specific python binary
+use_python("/home/user/python", required = TRUE)
+
+# Using a conda enviroment called "r-reticulate"
+use_condaenv("r-reticulate", required = TRUE)
+
+# Using a virtual environment called "r-reticulate"
+use_virtualenv("r-reticulate", required = TRUE)
+```
 
 # Using MOFA
 To load the package and the accompanying data package you can use:
