--- a/vignettes/MOFA_example_CLL.Rmd
+++ b/vignettes/MOFA_example_CLL.Rmd
@@ -134,7 +134,7 @@ MOFAobject <- prepareMOFA(
 Optionally, we can choose to regress out some (technical) covariates before training, using a simple linear model. For example, here we can choose to remove the effect of sex. Ideally, all undesired sources of variation should be removed a priori from the model. The reason ebing that, if strong technical factors exist, the model will "focus" on capturing the variability driven by the technical factors, and small sources of biological variability could be missed.  
 (Note: uncomment and running the function below will lead to a slight modification of the results)
 ```{r}
-# MOFAobject <- regressCovariate(
+# MOFAobject <- regressCovariates(
 #   object = MOFAobject,
 #   views = c("Drugs","Methylation","mRNA"),
 #   covariates = MOFAobject@InputData$Gender
